--- a/style.css
+++ b/style.css
@@ -11,67 +11,85 @@ body {
 }
 
 #container {
-  height: 900px;
   display: grid;
-  gap: 10px;
-  grid-template:
-    "header header header" 0.5fr
-    "bad bad badnext" 3fr
-    "religion religion religion" 2.5fr / 1fr 1.5fr 1.5fr;
+  height: 600px;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 
-#container div:nth-child(1) {
-  background-color: black;
-  grid-area: header;
+#container > div:nth-child(1) {
+  grid-column: span 2;
+  grid-row: span 2;
+  font-size: 50px;
+  font-weight: 500;
+  background-color: rgba(218, 231, 222);
+  color: rgba(244, 70, 7);
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#container > div:nth-child(2) {
+  grid-column: span 2;
+  grid-row: span 2;
+  font-size: 50px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 138, 105);
   color: #f6f6f6;
-  align-items: flex-end;
-  justify-content: space-between;
 }
 
-#container div:nth-child(2) {
-  background-color: red;
-  grid-area: bad;
+#container > div:nth-child(3) {
+  grid-column: span 2;
+  grid-row: span 2;
+  font-size: 50px;
+  font-weight: 500;
   display: flex;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(244, 70, 7);
+  color: #f6f6f6;
 }
 
-#container div:nth-child(3) {
-  background-color: red;
-  grid-area: badnext;
-}
-
-#container div:nth-child(4) {
-  background-color: red;
-  grid-area: religion;
-}
-
-span {
-  margin-bottom: 10px;
-  font-size: 15px;
-}
-
-span:nth-child(1) {
-  margin-left: 10px;
-}
-
-span:nth-child(2) {
-  margin-left: -150px;
-}
-
-span:nth-child(3) {
-  margin-right: 10px;
-}
-
-h1 {
-  font-weight: bolder;
-  font-size: 200px;
-}
-
-h5 {
-  margin-top: 40px;
-  margin-left: 10px;
-  color: white;
+#container > div:nth-child(4) {
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(244, 70, 7);
+  background-color: rgba(247, 171, 197);
 }
+
+#container > div:nth-child(5) {
+  font-size: 30px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #f6f6f6;
+  background-color: rgba(95, 95, 169);
+}
+
+#container > div:nth-child(6) {
+  font-size: 30px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(244, 70, 7);
+  background-color: rgba(255, 193, 40);
+}
+
+#container > div:nth-child(7) {
+  font-size: 30px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #f6f6f6;
+  background-color: rgba(249, 115, 116);
+}
+
