--- a/style.css
+++ b/style.css
@@ -2,94 +2,79 @@
 
 body {
   background-color: #f6f6f6;
-  padding: 50px 25px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
   Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  max-width: 770px;
+  height: 100vh;
   width: 100%;
   margin: 0 auto;
 }
 
+#header {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-rows: 10vw;
+}
+
+
 #container {
   display: grid;
-  height: 600px;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: repeat(auto-fit, 35vh);
+  grid-auto-rows: 35vh;
+}
+
+#header > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 5vmin;
+}
+
+#container > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  grid-column: inherit;
 }
 
 #container > div:nth-child(1) {
-  grid-column: span 2;
-  grid-row: span 2;
-  font-size: 50px;
-  font-weight: 500;
-  background-color: rgba(218, 231, 222);
-  color: rgba(244, 70, 7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#container > div:nth-child(2) {
-  grid-column: span 2;
-  grid-row: span 2;
-  font-size: 50px;
-  font-weight: 500;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 138, 105);
-  color: #f6f6f6;
+  background-color: #3dc1d3;
 }
 
 #container > div:nth-child(3) {
-  grid-column: span 2;
-  grid-row: span 2;
-  font-size: 50px;
-  font-weight: 500;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(244, 70, 7);
-  color: #f6f6f6;
-}
-
-#container > div:nth-child(4) {
-  font-size: 30px;
-  font-weight: 500;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: rgba(244, 70, 7);
-  background-color: rgba(247, 171, 197);
+  background-color: #ea8685;
 }
 
 #container > div:nth-child(5) {
-  font-size: 30px;
-  font-weight: 500;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #f6f6f6;
-  background-color: rgba(95, 95, 169);
-}
-
-#container > div:nth-child(6) {
-  font-size: 30px;
-  font-weight: 500;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: rgba(244, 70, 7);
-  background-color: rgba(255, 193, 40);
+  background-color: #cf6a87;
 }
 
 #container > div:nth-child(7) {
-  font-size: 30px;
-  font-weight: 500;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #f6f6f6;
-  background-color: rgba(249, 115, 116);
+  background-color: #f7d794;
 }
 
+#container > div:nth-child(9) {
+  background-color: #786fa6;
+}
+
+#container > div:nth-child(11) {
+  background-color: #f3a683;
+}
+
+#container > div > img {
+  width: 100%;
+  height: 100%;
+}
+
+#container > div > div:nth-child(1) {
+  font-size: 3vmin;
+  padding: 10%;
+}
+
+#container > div > div:nth-child(2) {
+  font-size: 1vmin;
+  padding: 10%;
+}
