--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
     background-color: #f6f6f6;
@@ -9,61 +10,106 @@ body {
 }
 
 #container {
+    height: 100vh;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-}
-
-#container > div {
-    padding: 15px;
+    grid-template-columns: 4% 46% 46% 4%;
+    grid-template-rows: 5% 45% 35% 10% 5%;
 }
 
 #container > div:nth-child(1) {
-    background-color: black;
-    color: white;
-    font-size: 35px;
+    grid-column: span 4;
+    background-color: white;
+    border: solid 3px orange;
+    color: orange;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 23px;
+    overflow: hidden;
+    font-style: italic;
 }
 
 #container > div:nth-child(2) {
-    background-color: blueviolet;
+    background-color: orange;
+    color: white;
+    font-family: "Sour Gummy", serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+}
+
+#container > div:nth-child(2) > div:nth-child(1) {
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+    font-style: italic;
+}
+
+#container > div:nth-child(2) > div:nth-child(2) {
+    font-size: 5px;
+    margin: 7px;
+}
+
+#container > div:nth-child(2) > div:nth-child(3) {
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+    font-style: italic;
+}
+#container > div:nth-child(2) > div:nth-child(4) {
+    font-size: 5px;
+    margin: 7px;
+}
+
+
+#container > div:nth-child(2) > div:nth-child(5) {
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+    font-style: italic;
 }
 
 #container > div:nth-child(3) {
     grid-row: span 3;
-    display: flex;
-    flex-direction: column;
-    font-size: 25px;
 }
 
-#container > div:nth-child(3) > div:first-child {
-    font-size: 14px;
-    margin-bottom: 10px;
-}
-
-#container > div:nth-child(3) > div:nth-child(6){
-    width: max-content;
-    background-color: #786fa6;
+img {
+    width: 100%;
+    height: 100%;
 }
 
 #container > div:nth-child(4) {
     grid-row: span 3;
-    display: flex;
-    flex-direction: column;
-    font-size: 25px;
-}
-
-#container > div:nth-child(4) > div:first-child {
-    font-size: 14px;
-    margin-bottom: 10px;
 }
 
 #container > div:nth-child(5) {
-    grid-row: span 2;
-    background-color: red;
-    font-size: 30px;
+    border: solid 3px orange;
+    background-color: green;
+    color: white;
+}
+
+#container > div:nth-child(6) {
+    border: solid 3px orange;
+    background-color: white;
+    color: orange;
 }
 
 #container > div:nth-child(7) {
-    background-color: gold;
-    font-size: 30px;
+    grid-row: span 2;
+    border: solid 3px orange;
+    background-color: green;
+    color: white;
 }
+
+#container > div:nth-child(8) {
+    border: solid 3px orange;
+    background-color: white;
+    color: orange;
+}
+
+#container > div:nth-child(9) {
+    grid-column: span 4;
+    border: solid 3px orange;
+    background-color: white;
+    color: orange;
+}
+
