--- a/style.css
+++ b/style.css
@@ -1,216 +1,128 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css');
-@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
     background-color: #f6f6f6;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    width: 100%;
     height: 100%;
+    padding: 10px;
 }
 
-#main {
-    position: relative;
+#header {
+    height: 5vh;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
 }
 
-#curry {
-    position: absolute;
-    left: 33%;
-    top: 30%;
-    font-size: 100px;
+#header > div {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
     align-items: center;
-    font-weight: bold;
+    justify-content: space-between;
 }
 
-#curry > div:nth-child(1) {
-    font-size: 50px;
+#header > div > div {
+    padding: 5px;
 }
 
-#chat {
-    position: absolute;
-    left: 93%;
-    top: 91%;
+#header > div:nth-child(1) {
+    border: 3px solid black;
+    border-left: 0
 }
 
-#chat > div {
-    background-color: orange;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    box-shadow: 0px 8px 6px -6px #666
+#header > div:nth-child(2) {
+    border: 3px solid black;
 }
 
-#chat > div > svg > path {
-    fill : white;
+#header > div:nth-child(3) {
+    border: 3px solid black;
 }
 
+#header > div:nth-child(4) {
+    border: 3px solid black;
+}
+
+#header > div:nth-child(5) {
+    border: 3px solid black;
+    border-right: 0;
+}
 
 #container {
-    height: 100vh;
+    height: 85vh;
     display: grid;
-    grid-template-columns: 4% 46% 46% 4%;
-    grid-template-rows: 5% 45% 35% 10% 5%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(auto-fill, minmax(250px));
+}
+
+#container > div > div:nth-child(1) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+#container > div > div:nth-child(2) {
+    display: flex;
+    justify-content: center;
+    margin-top: 1vh;
+}
+
+#container > div > div:nth-child(3) {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+    margin-top: 2vh;
+}
+
+#container > div > div:nth-child(3) > div:nth-child(2) {
+    text-decoration: underline;
 }
 
 #container > div:nth-child(1) {
-    grid-column: span 4;
-    background-color: white;
-    border: solid 3px orange;
-    color: orange;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 23px;
-    overflow: hidden;
-    font-style: italic;
+    border: 3px solid black;
+    border-left: 0;
 }
 
 #container > div:nth-child(2) {
-    background-color: orange;
-    color: white;
-    font-family: "Sour Gummy", serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 15px;
-}
-
-#container > div:nth-child(2) > div:nth-child(1) {
-    writing-mode: vertical-lr;
-    text-orientation: upright;
-    font-style: italic;
-}
-
-#container > div:nth-child(2) > div:nth-child(2) {
-    font-size: 5px;
-    margin: 7px;
-}
-
-#container > div:nth-child(2) > div:nth-child(3) {
-    writing-mode: vertical-lr;
-    text-orientation: upright;
-    font-style: italic;
-}
-#container > div:nth-child(2) > div:nth-child(4) {
-    font-size: 5px;
-    margin: 7px;
-}
-
-
-#container > div:nth-child(2) > div:nth-child(5) {
-    writing-mode: vertical-lr;
-    text-orientation: upright;
-    font-style: italic;
+    border: 3px solid black;
 }
 
 #container > div:nth-child(3) {
-    grid-row: span 3;
-}
-
-img {
-    width: 100%;
-    height: 100%;
+    border: 3px solid black;
+    border-right: 0;
 }
 
 #container > div:nth-child(4) {
-    grid-row: span 3;
+    border: 3px solid black;
+    border-left: 0;
 }
 
 #container > div:nth-child(5) {
-    border: solid 3px orange;
-    background-color: green;
-    color: white;
-    font-family: "Sour Gummy", serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-#container > div:nth-child(5) > div:nth-child(2) {
-    writing-mode: vertical-lr;
-    text-orientation: upright;
-    font-style: italic;
+    border: 3px solid black;
 }
 
 #container > div:nth-child(6) {
-    border: solid 3px orange;
-    background-color: white;
-    color: orange;
-    font-size: 15px;
-    font-family: "Sour Gummy", serif;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#container > div:nth-child(6) > div:nth-child(1) {
-    writing-mode: vertical-rl;
-    transform: rotate(-180deg);
-    letter-spacing: 5px;
+    border: 3px solid black;
+    border-right: 0;
 }
 
 #container > div:nth-child(7) {
-    grid-row: span 2;
-    border: solid 3px orange;
-    background-color: green;
-    color: white;
-    font-family: "Sour Gummy", serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-#container > div:nth-child(7) > div:nth-child(2) {
-    writing-mode: vertical-lr;
-    text-orientation: upright;
-    font-style: italic;
+    border: 3px solid black;
+    border-left: 0;
 }
 
 #container > div:nth-child(8) {
-    border: solid 3px orange;
-    background-color: white;
-    color: orange;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-
+    border: 3px solid black;
 }
 
 #container > div:nth-child(9) {
-    grid-column: span 4;
-    border: solid 3px orange;
-    background-color: white;
-    color: orange;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 23px;
-    overflow: hidden;
-    font-style: italic;
+    border: 3px solid black;
+    border-right: 0;
+}
+
+img {
+    width: 20vw;
+    height: 18vh;
 }
 
 
-svg {
-    width: 25px;
-    height: 25px;
-}
-
-svg > path{
-    fill: orange;
-}
 
