--- a/style.css
+++ b/style.css
@@ -3,126 +3,315 @@ body {
     background-color: #f6f6f6;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 100%;
-    padding: 10px;
-}
-
-#header {
-    height: 5vh;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-}
-
-#header > div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#header > div > div {
-    padding: 5px;
-}
-
-#header > div:nth-child(1) {
-    border: 3px solid black;
-    border-left: 0
-}
-
-#header > div:nth-child(2) {
-    border: 3px solid black;
-}
-
-#header > div:nth-child(3) {
-    border: 3px solid black;
-}
-
-#header > div:nth-child(4) {
-    border: 3px solid black;
-}
-
-#header > div:nth-child(5) {
-    border: 3px solid black;
-    border-right: 0;
+    margin: 0;
 }
 
 #container {
-    height: 85vh;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(auto-fill, minmax(250px));
-}
-
-#container > div > div:nth-child(1) {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    padding: 5px;
 }
 
-#container > div > div:nth-child(2) {
+#left {
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 3vw 35vw 20vw;
+    grid-template-rows: repeat(12, 1fr);
+    background-color: orange;
+}
+
+#left > div:nth-child(1) {
+    border: 1px solid red;
+    grid-row :span 2;
+    writing-mode: vertical-rl;
+    transform: rotate(-180deg);
     display: flex;
     justify-content: center;
-    margin-top: 1vh;
+    align-items: center;
+    color: red;
 }
 
-#container > div > div:nth-child(3) {
+#left > div:nth-child(2) {
+    border: 1px solid red;
+    grid-row :span 2;
     display: flex;
-    justify-content: space-between;
-    padding: 5px;
-    margin-top: 2vh;
+    align-items: center;
+    font-size: 100px;
+    padding-left: 10px;
+    color: red;
 }
 
-#container > div > div:nth-child(3) > div:nth-child(2) {
-    text-decoration: underline;
+#left > div:nth-child(3) {
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
 }
 
-#container > div:nth-child(1) {
-    border: 3px solid black;
-    border-left: 0;
+#left > div:nth-child(4) {
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#container > div:nth-child(2) {
-    border: 3px solid black;
+#left > div:nth-child(4) > div {
+    background-color: red;
+    white-space: nowrap;
+    width: 220px;
+    height: 40px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: orange;
 }
 
-#container > div:nth-child(3) {
-    border: 3px solid black;
-    border-right: 0;
+#left > div:nth-child(5) {
+    border: 1px solid white;
+    grid-row :span 2;
+    writing-mode: vertical-rl;
+    transform: rotate(-180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
 }
 
-#container > div:nth-child(4) {
-    border: 3px solid black;
-    border-left: 0;
+#left > div:nth-child(6) {
+    border: 1px solid white;
+    grid-row :span 2;
+    display: flex;
+    align-items: center;
+    font-size: 60px;
+    font-weight: bold;
+    padding-left: 10px;
+    color: white;
 }
 
-#container > div:nth-child(5) {
-    border: 3px solid black;
+#left > div:nth-child(7) {
+    border: 1px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
 }
 
-#container > div:nth-child(6) {
-    border: 3px solid black;
-    border-right: 0;
+#left > div:nth-child(8) {
+    border: 1px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#container > div:nth-child(7) {
-    border: 3px solid black;
-    border-left: 0;
+#left > div:nth-child(8) > div {
+    background-color: white;
+    white-space: nowrap;
+    width: 220px;
+    height: 40px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: orange;
 }
 
-#container > div:nth-child(8) {
-    border: 3px solid black;
+#left > div:nth-child(9) {
+    border: 1px solid red;
+    grid-row :span 2;
+    writing-mode: vertical-rl;
+    transform: rotate(-180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
 }
 
-#container > div:nth-child(9) {
-    border: 3px solid black;
-    border-right: 0;
+#left > div:nth-child(10) {
+    border: 1px solid red;
+    grid-row :span 2;
+    display: flex;
+    align-items: center;
+    font-size: 100px;
+    padding-left: 10px;
+    color: red;
 }
 
-img {
-    width: 20vw;
-    height: 18vh;
+#left > div:nth-child(11) {
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
 }
+
+#left > div:nth-child(12) {
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#left > div:nth-child(12) > div {
+    background-color: red;
+    white-space: nowrap;
+    width: 220px;
+    height: 40px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: orange;
+}
+
+#left > div:nth-child(13) {
+    border: 1px solid red;
+    grid-row :span 2;
+    writing-mode: vertical-rl;
+    transform: rotate(-180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+}
+
+#left > div:nth-child(14) {
+    border: 1px solid red;
+    grid-row :span 2;
+    display: flex;
+    align-items: center;
+    font-size: 100px;
+    padding-left: 10px;
+    color: red;
+}
+
+#left > div:nth-child(15) {
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+}
+
+#left > div:nth-child(16) {
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#left > div:nth-child(16) > div {
+    background-color: red;
+    white-space: nowrap;
+    width: 220px;
+    height: 40px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: orange;
+}
+
+#left > div:nth-child(17) {
+    border: 1px solid red;
+    grid-row :span 2;
+    writing-mode: vertical-rl;
+    transform: rotate(-180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+}
+
+#left > div:nth-child(18) {
+    border: 1px solid red;
+    grid-row :span 2;
+    display: flex;
+    align-items: center;
+    font-size: 60px;
+    font-weight: bold;
+    padding-left: 10px;
+    color: red;
+}
+
+#left > div:nth-child(19) {
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+}
+
+#left > div:nth-child(20) {
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#left > div:nth-child(20) > div {
+    background-color: red;
+    white-space: nowrap;
+    width: 220px;
+    height: 40px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: orange;
+}
+
+#left > div:nth-child(21) {
+    border: 1px solid red;
+    grid-row :span 2;
+    writing-mode: vertical-rl;
+    transform: rotate(-180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+}
+
+#left > div:nth-child(22) {
+    border: 1px solid red;
+    grid-row :span 2;
+    display: flex;
+    align-items: center;
+    font-size: 60px;
+    font-weight: bold;
+    padding-left: 10px;
+    color: red;
+}
+
+#left > div:nth-child(23) {
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+}
+
+#left > div:nth-child(24) {
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#left > div:nth-child(24) > div {
+    background-color: red;
+    white-space: nowrap;
+    width: 220px;
+    height: 40px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: orange;
+}
+
+
+
 
 
 
