11/23 css 11-12일차 과제 완료

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 #left {
     display: grid;
     height: 100vh;
-    grid-template-columns: 3vw 35vw 20vw;
+    grid-template-columns: 3vw 35vw 30vw;
     grid-template-rows: repeat(12, 1fr);
     background-color: orange;
 }
@@ -308,6 +308,73 @@ body {
     justify-content: center;
     align-items: center;
     color: orange;
+}
+
+#middle {
+    display: flex;
+    flex-direction: column;
+}
+
+#middle > div:nth-child(1) {
+    width: 7vw;
+    height: 50%;
+    background-color: pink;
+    writing-mode: vertical-rl;
+    transform: rotate(-360deg);
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+}
+
+#middle > div:nth-child(2) {
+    position: absolute;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 47%;
+    z-index: 10;
+}
+
+#middle > div:nth-child(3) {
+    width: 7vw;
+    height: 50%;
+    background-color: blue;
+    writing-mode: vertical-rl;
+    transform: rotate(-180deg);
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+}
+
+#right {
+    background-color: red;
+}
+
+#right > div:nth-child(1) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+#right > div:nth-child(2) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    gap: 10px;
+}
+
+#right > div:nth-child(2) > div {
+    border-top: 1px solid black;
+}
+
+#right > div:nth-child(2) > div > div:nth-child(1) {
+    font-size: 30px;
+}
+
+#right > div:nth-child(2) > div > div:nth-child(2) {
+    font-size: 13px;
 }
 
 
